k8s-manifests/sampleapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: neo
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http 
  selector:
    app: neo
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo
  template:
    metadata:
      labels:
        app: neo
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
        ports:
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
