k8s-manifests/test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http 
  selector:
    app: bar
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
        ports:
          - name: http
            containerPort: 8080
